tests/field/set_on_str.rev
"foo".bar = 5 // error: only structure instances have properties